2008-06-08  Christian Persch  <chpe@gnome.org>

        Reviewed by Darin.

        - https://bugs.webkit.org/show_bug.cgi?id=19309
          uninitialised variable in PluginView

        * plugins/PluginView.cpp:
        (WebCore::PluginView::PluginView): Initialise the NPP's pdata member to 0.

2008-06-08  Darin Adler  <darin@apple.com>

        Reviewed by Mitz.

        - https://bugs.webkit.org/show_bug.cgi?id=19435
          fix warning in PluginDebug.h

        * plugins/PluginDebug.h: Don't compile the errorStrings array if LOG_DISABLED is set.

2008-06-07  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19431
          <rdar://problem/5994060> REGRESSION (r32406): tabs retain hover color after mouse out

        Covered by fast/css/remove-shorthand.html

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::initShorthandMap): Fixed a typo which mapped the background
        shorthand to the mask properties.

2008-06-07  Brent Fulgham  <bfulgham@gmail.com>

        Cairo build fix for r34432

        * html/CanvasPattern.cpp:
        (WebCore::CanvasPattern::CanvasPattern):

2008-06-07  Darin Adler  <darin@apple.com>

        Reviewed by Mitz.

        - work on https://bugs.webkit.org/show_bug.cgi?id=17257
          start ref counts at 1 instead of 0 for speed

        * bindings/js/JSCanvasRenderingContext2DCustom.cpp:
        (WebCore::toHTMLCanvasStyle):
        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::JSDOMWindowBase::findOrCreateJSEventListener):
        (WebCore::JSDOMWindowBase::findOrCreateJSUnprotectedEventListener):
        * bindings/js/JSNodeFilterCondition.h:
        (WebCore::JSNodeFilterCondition::create):
        * bindings/js/JSNodeFilterCustom.cpp:
        (WebCore::toNodeFilter):
        * bindings/js/JSSVGLazyEventListener.h:
        (WebCore::JSSVGLazyEventListener::create):
        * bindings/js/JSSVGMatrixCustom.cpp: