@@ -1,3 +1,15 @@
+2008-06-08  Eric Carlson  <eric.carlson@apple.com>
+
+        Reviewed by Antti.
+
+        - fix https://bugs.webkit.org/show_bug.cgi?id=19299
+          <rdar://problem/5969392>
+
+        Generate the media MIME type list dynamically.
+
+        * platform/graphics/win/QTMovieWin.cpp:
+        (initializeSupportedTypes):
+
 2008-06-08  Christian Persch  <chpe@gnome.org>
 
         Reviewed by Darin.
